# pemdas-haskell

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pemdas.cabal
app/: Main.hs
src/Pemdas/: Definitions.hs  Functions.hs  Parse.hs  Types.hs
test/: Main.hs
